--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,2 @@
-<input type="text" [(ngModel)]="title">
-{{ title }}
-
-<input type="text" [(ngModel)]="power">
-{{ power | exponencial}}
-
-<div [ngSwitch]="title">
-  <p *ngSwitchCase="'Mostrar 1'">Mostrar 1</p>
-  <p *ngSwitchCase="'Mostrar 2'">Mostrar 2</p>
-  <p *ngSwitchCase="'Mostrar 3'">Mostrar 3</p>
-  <p *ngSwitchDefault>Sin resultado</p>
-</div>
-
-<button (click)="addItem(title)">Add Item</button>
-
-<ul>
-  <li *ngIf="items.length === 0">Lista vacía</li>
-  <li *ngFor="let item of items; index as i">
-    {{i}} - {{item}}
-    <button (click)="deleteItem(i)">Delete</button>
-  </li>
-</ul>
-
-<div class="product-grid">
-  <app-product *ngFor="let product of products"
-               (productClicked)="clickProduct($event)"
-               [product]="product">
-  </app-product>
-</div>
+<router-outlet></router-outlet>
 
