[home]: Creación del componente home y el componente detalle del producto

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,5 +1,6 @@
+<app-header></app-header>
 <div class="product-grid">
-  <app-product *ngFor="let product of products"
+  <app-product *ngFor="let product of productsService.getAllProducts()"
                (productClicked)="clickProduct($event)"
                [product]="product">
   </app-product>
