--- a/src/app/components/product/components/product/product.component.html
+++ b/src/app/components/product/components/product/product.component.html
@@ -3,5 +3,5 @@
 <strong>{{ product.price | currency:'EUR':true }}</strong>
 <p>{{ product.description | slice:0:15}}</p>
 <p>{{ today | date:'medium' }}</p>
-<button (click)="addCart()">Agregar al carrito</button>
+<button (click)="addCart()" mat-raised-button color="primary">Agregar al carrito</button>
 <a [routerLink]="['/products', product.id]">Ver detalle</a>
