[header]: creación del header, footer y listado de productos

--- a/src/app/modules/shared/components/header/header.component.scss
+++ b/src/app/modules/shared/components/header/header.component.scss
@@ -4,5 +4,10 @@ nav > a {
 }
 
 nav > a.active {
-  background-color: blue;
+  background-color: white;
+  color: black;
+}
+
+.w-100 {
+  width: 100%;
 }
