--- a/src/app/components/product/components/product/product.component.html
+++ b/src/app/components/product/components/product/product.component.html
@@ -1,7 +1,17 @@
-<h3 appHighlight>{{ product.title | uppercase }}</h3>
-<img [src]="product.image" alt="">
-<strong>{{ product.price | currency:'EUR':true }}</strong>
-<p>{{ product.description | slice:0:15}}</p>
-<p>{{ today | date:'medium' }}</p>
-<button (click)="addCart()" mat-raised-button color="primary">Agregar al carrito</button>
-<a [routerLink]="['/products', product.id]">Ver detalle</a>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>{{ product.title | uppercase }}</mat-card-title>
+    <mat-card-subtitle>{{ product.price | currency:'EUR':true }}</mat-card-subtitle>
+  </mat-card-header>
+  <div class="crop-image">
+    <img [src]="product.image" alt="">
+  </div>
+  <mat-card-content>
+    <p>{{ product.description | slice:0:100}}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <a mat-raised-button [routerLink]="['/products', product.id]">Ver detalle</a>
+    <button (click)="addCart()" mat-raised-button color="primary">Agregar al carrito</button>
+  </mat-card-actions>
+  <mat-card-footer></mat-card-footer>
+</mat-card>
