--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,7 +1,18 @@
-<nav>
-  <a routerLink="/home" routerLinkActive="active">Home</a>
-  <a routerLink="/products" routerLinkActive="active">Products</a>
-  <a routerLink="/contact" routerLinkActive="active">Contact</a>
-  <a routerLink="/demo" routerLinkActive="active">Demo</a>
-  <a routerLink="/cards" routerLinkActive="active">Card</a>
-</nav>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <div class="row between-xs middle-xs w-100">
+      <nav>
+        <a mat-button routerLink="/home" routerLinkActive="active">Home</a>
+        <a mat-button routerLink="/products" routerLinkActive="active">Products</a>
+        <a mat-button routerLink="/contact" routerLinkActive="active">Contact</a>
+        <a mat-button routerLink="/demo" routerLinkActive="active">Demo</a>
+        <a mat-button routerLink="/cards" routerLinkActive="active">Card</a>
+      </nav>
+      <a mat-raised-button matBadge="4" matBadgeColor="warn" >
+        <mat-icon>add_shopping_cart</mat-icon>
+        Carrito
+      </a>
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
+
