--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,12 +3,26 @@
 .product-grid {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
+  grid-gap: 50px 20px;
+}
+
+.container {
+  width: 100%;
+  padding-right: 0;
+  padding-left: 0;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 @media (min-width: 576px) {
   .product-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+  }
+  .container {
+    max-width: 1100px;
+    padding-right: 16px;
+    padding-left: 16px;
   }
 }
 
