[local]: usando angular schematic para crear componentes

--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -7,6 +7,7 @@
         <a mat-button routerLink="/contact" routerLinkActive="active">Contact</a>
         <a mat-button routerLink="/demo" routerLinkActive="active">Demo</a>
         <a mat-button routerLink="/cards" routerLinkActive="active">Card</a>
+        <a mat-button routerLink="/admin" routerLinkActive="active">Admin</a>
       </nav>
       <a mat-raised-button matBadge="4" matBadgeColor="warn" >
         <mat-icon>add_shopping_cart</mat-icon>
