--- a/src/app/components/product/components/products/products.component.html
+++ b/src/app/components/product/components/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="product-grid">
-  <app-product *ngFor="let product of productsService.getAllProducts()"
+  <app-product *ngFor="let product of products"
                (productClicked)="clickProduct($event)"
                [product]="product">
   </app-product>
