--- a/src/app/components/product/components/product-detail/product-detail.component.html
+++ b/src/app/components/product/components/product-detail/product-detail.component.html
@@ -1,10 +1,14 @@
-<div class="product-detail">
-  <img [src]="product.image" alt="">
-</div>
-<div>
-  <ul>
-    <li>Nombre: {{ product.title }}</li>
-    <li>Precio: {{ product.price | currency:'EUR':true}} </li>
-  </ul>
-  <p>{{ product.description }}</p>
+<div *ngIf="product">
+  <div class="product-detail">
+    <img [src]="product.image" alt="">
+  </div>
+  <div>
+    <ul>
+      <li>Nombre: {{ product.title }}</li>
+      <li>Precio: {{ product.price | currency:'EUR':true}} </li>
+    </ul>
+    <p>{{ product.description }}</p>
+  </div>
+  <button (click)="createProduct()">Crear</button>
+
 </div>
