--- a/src/app/components/product/components/product-detail/product-detail.component.html
+++ b/src/app/components/product/components/product-detail/product-detail.component.html
@@ -10,5 +10,7 @@
     <p>{{ product.description }}</p>
   </div>
   <button (click)="createProduct()">Crear</button>
+  <button (click)="updateProduct()">Update</button>
+  <button (click)="deleteProduct()">Delete</button>
 
 </div>
