--- a/src/app/components/admin/components/navigate/navigate.component.html
+++ b/src/app/components/admin/components/navigate/navigate.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item routerLink="/admin/dashboard">Dashboard</a>
       <a mat-list-item routerLink="/admin/create">Crear Productos</a>
       <a mat-list-item routerLink="/admin/table">Table</a>
+      <a mat-list-item routerLink="/admin/products-list">Products List</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
